src/test/deca/context/invalid/homemade/tests/test368_affectation_type_class.deca
// test invalide de la règle 3.68


class A{

    
}

{   
    A a = new A();
    a = 2;
}